--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,7 +3,11 @@
 @import './transition.scss';
 @import './element-ui.scss';
 @import './sidebar.scss';
-
+*{
+  padding:0;
+  margin:0;
+  list-style: none;
+}
 body {
   height: 100%;
   -moz-osx-font-smoothing: grayscale;
