--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,9 +3,7 @@
 @import './transition.scss';
 @import './element-ui.scss';
 @import './sidebar.scss';
-*{
-  padding:0;
-  margin:0;
+li{
   list-style: none;
 }
 body {
