--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,6 +9,9 @@ $menuHover:#263445;
 $subMenuBg:#1f2d3d;
 $subMenuHover:#001528;
 
+$appMainBg: #edf2f7;
+$appMainPageBg: #fff;
+
 $sideBarWidth: 210px;
 
 // the :export directive is the magic sauce for webpack
